Cross compatibility spacing issue fix for eWallets
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@42202 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/expressco/expressco.css
+++ b/projects/Media/docroot/assets/css/expressco/expressco.css
@@ -121,7 +121,9 @@
   font-size:16px;
   line-height:16px;
 }
-
+.checkout-wallet-button{
+	margin-top: 2px;
+}
 #payment-method-separator{
 		font-size: 11px;
     		font-weight: bold;
